fix: networking.k8s.io/v1 backend
Signed-off-by: ChenLong Ma <owlet42@126.com>

--- a/k8s-deploy/kubefate.yaml
+++ b/k8s-deploy/kubefate.yaml
@@ -163,5 +163,7 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: kubefate
-              servicePort: 8080
+              service:
+                name: kubefate
+                port: 
+                  number: 8080
